# naoqi_dashboard

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py  stack.xml
config/: naoqi_dashboard_aggregator.yaml
launch/: naoqi_dashboard.launch
nao_dashboard/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  plugin.xml
nao_dashboard/config/: nao_dashboard_aggregator.yaml
nao_dashboard/icons/: Makefile
nao_dashboard/launch/: nao_dashboard.launch
nao_dashboard/scripts/: nao_dashboard
nao_dashboard/src/: NaoJointsAnalyzer.cpp
nao_dashboard/src/nao_dashboard/: __init__.py  avahi.py  diagnostics_frame.py  frame.py  motors.py  nao_frame.py  power_state_control.py  rosout_frame.py  status_control.py
scripts/: naoqi_dashboard
src/naoqi_dashboard/: avahi.py  frame.py  motors.py  posture.py  status_control.py
