<package>
  <name>naoqi_dashboard</name>
  <version>0.1.4</version>
  <description>
    naoqi_dashboard is a GUI for monitoring the state of an ALdebaran robot.
    It is a port of pr2_dashboard and shows status information like
    battery status, joint temperatures, and joint stiffness, as well
    as integrating ROS tools like rqt_console and rqt_robot_monitor.
  </description>
  <author>Stefan Osswald</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/naoqi_dashboard</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>diagnostic_common_diagnostics</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend version_gte="0.0.4">naoqi_bridge_msgs</run_depend>
  <run_depend>rqt_robot_dashboard</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>

  <conflict>nao_dashboard</conflict>
  <conflict>nao_viz</conflict>

  <export> 
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <architecture_independent/>
  </export>
</package>
